<resources>
    <string name="app_name">小黄鸭</string>

    <string name="empty_user_intro">这家伙很懒，什么也没留下</string>

    <!-- quick option -->

    <string name="loading">加载中…</string>

    <!-- Error View -->
    <string name="error_view_no_data">暂无内容</string>
    <string name="error_view_loading">加载中…</string>
    <string name="error_view_loading_local_friend">获取附近的程序员中…</string>
    <string name="tip_network_error">没有可用的网络</string>
    <string name="tip_network_check">网络异常,请检查您的网络</string>

    <!-- notification messages -->

    <string name="progress_submit">正在提交…</string>

    <!-- 找人不显示标题 -->

    <!-- 博客区 -->

    <!-- software detail -->

    <string name="mention_count">\@我[%s] </string>
    <string name="letter_count">私信[%s] </string>
    <string name="review_count">评论[%s] </string>
    <string name="fans_count">新粉丝[%s] </string>
    <string name="like_count">收到赞[%s] </string>

    <!--设置中心-->
    <!-- 反馈 -->
    <!-- 选择好友 -->
    <string name="permissions_camera_error">相机无法完成初始化,请正确授权。</string>

    <string name="state_network_error">网络错误</string>
    <string name="state_network_json_error">网络出现异常,请稍后重试</string>
    <string name="state_loading">正在加载…</string>
    <string name="state_not_more">没有更多数据</string>
    <string name="state_load_error">加载失败</string>
    <string name="state_refreshing">正在刷新</string>
    <string name="state_click_loadmore">点击加载更多</string>

    <string name="gallery_save_file_not_have_external_storage_permission">没有外部存储权限!</string>
    <string name="gallery_save_file_not_have_external_storage">没有外部存储!</string>
    <string name="gallery_save_file_success">保存成功!</string>
    <string name="gallery_save_file_failed">存储失败!</string>
    <string name="image_select_opt_done">完成</string>
    <string name="image_select_opt_preview">预览</string>

    <!-- 个人信息-->
    <string name="title_icon_null">图像不存在，上传失败</string>
    <string name="title_update_fail_status">个人信息更新失败&#8230;</string>

    <!--新版登录专用-->
    <string name="login_input_username_hint_error">请输入正确的用户名&#8230;</string>
    <string name="register_sms_hint">获取验证码</string>
    <string name="register_sms_wait_hint">别激动,休息一下呗&#8230;</string>
    <string name="reset_pwd_hint">请输入至少六位新密码</string>
    <string name="hint_phone_ok">请输入正确的手机号码</string>
    <string name="reset_pwd_done">完成</string>
    <string name="request_error_hint">网络请求失败,请重试&#8230;</string>
    <string name="send_sms_code_success">验证码已发送,请注意查收</string>
    <string name="reset_success_hint">密码重置成功</string>
    <string name="message_username_null">用户名未填写！！！</string>
    <string name="pwd_no_space">密码不能包含空格！</string>

    <!--新版评论专用-->
    <string name="send_hint">发送</string>
    <string name="comment_hint">请输入评论</string>

    <!--git版本-->

    <!-- 个人详情页 -->

    <!-- 注册页 -->
    <string name="telephone">手机号</string>
    <string name="verify_code_not_null">验证码不能为空</string>
    <string name="register_get_verifycode">获取验证码</string>
    <string name="record_camera_next">下一步</string>
    <string name="input_text_zhanghao">账号(6-20位字符 必填)</string>
    <string name="input_text_nick">昵称(2-20位字符 必填)</string>
    <string name="input_pwd">密码(6-15位字符 必填)</string>
    <string name="input_invite_code">邀请人ID(如有)</string>
    <string name="register">注册</string>
    <string name="register_title">注册</string>

    <!-- 登录页 -->
    <string name="uname_or_tel">用户名/手机号</string>
    <string name="hint_password">密码</string>
    <string name="logine">登     录</string>
    <string name="new_user_register">新用户注册</string>
    <string name="forget_password">忘记密码</string>

    <!-- 忘记密码 -->
    <string name="reset_password">重置密码</string>
    <string name="input_new_password">输入新密码</string>
    <string name="confirm_new_password">确认新密码</string>
    <string name="hint_pwd">6-15位字符除空格</string>

    <!-- 个人信息 -->
    <string name="score">积分</string>
    <string name="tv_mycollection">我的收藏</string>
    <string name="tv_mybuy">我的购买</string>
    <string name="tv_myrecode">我的积分</string>
    <string name="tv_bind_phone">绑定手机</string>
    <string name="tv_feedback">意见反馈</string>
    <string name="tv_bind_phone_hint">获取%1$d积分</string>
    <!-- 积分界面 -->

    <!-- 积分充值 -->
    <string name="tv_score_top_up">积分充值</string>
    <string name="chongzhi_fail">充值失败</string>
    <string name="update_weixin_app">请安装微信最新版！</string>


    <!-- 我的收藏 -->
    <string name="cancel_collect_success">已取消收藏</string>
    <string name="cancel_collect_fail">取消收藏失败</string>
    <!-- 礼物详情页 -->
    <string name="tv_gift_shop">积分商城</string>
    <!-- 积分规则页 -->
    <string name="tv_score_rule">积分规则</string>
    <!-- 个人积分详情页 -->
    <string name="tv_score_detail">积分明细</string>
    <!-- 意见反馈页 -->
    <string name="send_action">发送</string>
    <!-- 修改密码页 -->
    <string name="set_password">修改密码</string>
    <!-- 扫一扫 -->
    <string name="tv_scan">扫一扫</string>
    <!-- VIP -->
    <string name="tv_vip">我要成为VIP</string>
    <string name="tv_chongzhi">我要充值</string>

    <string name="feedback_description">请在这里填写您对产品的意见和建议，我们将不断改进让小黄鸭做的更好，谢谢支持!</string>

    <!-- lock screen -->
    <!-- Gesture login activity -->
    <string name="gesture_forget_gesture">忘记手势密码</string>
    <string name="gesture_default">请输入手势密码</string>
    <string name="gesture_error">手势密码输入错误</string>
    <string name="gesture_correct">输入正确</string>

    <!-- Create gesture activity -->
    <string name="create_gesture_default">绘制解锁图案</string>
    <string name="create_gesture_correct">再次绘制解锁图案</string>
    <string name="create_gesture_less_error">至少连接4个点，请重新输入</string>
    <string name="create_gesture_confirm_error">与上一次绘制不一致，请重新绘制</string>
    <string name="create_gesture_confirm_correct">设置成功</string>
    <string name="create_gesture_reset">重新设置</string>
    <string name="open_lockscreen">解锁</string>

    <!-- default empty page -->
    <string name="empty_content">没有任何内容</string>
    <string name="block_canary_display_activity_label">Blocks</string>

    <!-- 显示免费视频页 -->
    <string name="free_page_login">登录</string>
    <string name="free_page_register">注册</string>
    <!-- dialog button  -->
    <string name="chongzhi_positive_button">去充值</string>
    <string name="chongzhi_negative_button">我没钱</string>
    <string name="chongzhi_neutral_score_button">获取积分</string>
    <string name="chongzhi_neutral_vip_button">获取vip</string>

    <!-- net message -->
    <string name="net_unable">网络异常</string>
    <string name="net_error_msg">网络不给力,点击重试</string>
    <string name="open_storage_permit">请打开存储权限，否则影响APP更新</string>

    <!-- 客服联系方式 -->
    <string name="kefu_mail"></string>
    <!-- 应用更新 -->
    <string name="update_title">应用更新</string>
    <string name="custom_content_text">小黄鸭下载进度:%d%%/100%%</string>
    <string name="update_already">已经是新版本了</string>

</resources>


