<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@id/rl_title"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/title_height"
        android:background="@color/activity_title_bg"
        android:visibility="visible">

        <TextView
            android:id="@+id/tv_login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/_10dp"
            android:text="@string/free_page_login"
            android:textColor="@color/theme_font_color"
            android:textSize="@dimen/txt_size_title"
            android:visibility="visible" />

        <TextView
            android:id="@+id/tv_title_center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:drawablePadding="5.0dip"
            android:text="@string/app_name"
            android:textColor="@color/title_background"
            android:textSize="@dimen/txt_size_title"
            android:visibility="visible" />

        <TextView
            android:id="@+id/tv_register_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/_10dp"
            android:text="@string/free_page_register"
            android:textColor="@color/theme_font_color"
            android:textSize="@dimen/txt_size_title"
            android:visibility="visible" />

    </RelativeLayout>

    <FrameLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:background="@color/bg_ios"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ad_banner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="9dp"
                android:orientation="vertical"></LinearLayout>

            <com.xhy.neihanduanzi.view.AutoLoadRecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="vertical" />

        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:background="@drawable/titlebar_shadow" />
    </FrameLayout>
</LinearLayout>