<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="107dp"
            android:background="@color/white"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/login_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/login_logo"
                android:scaleType="centerCrop"
                android:visibility="visible" />

            <TextView
                android:id="@+id/login_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="19dip"
                android:text="登录小黄鸭"
                android:textColor="#444444"
                android:textSize="@dimen/_16sp"
                android:textStyle="bold"
                android:visibility="visible" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="54dip"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dimen_size_40"
                        android:layout_marginRight="@dimen/dimen_size_40"
                        android:baselineAligned="false"
                        android:focusable="true"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dip"
                            android:src="@drawable/login_user" />

                        <AutoCompleteTextView
                            android:id="@+id/email"
                            android:layout_width="fill_parent"
                            android:layout_height="@dimen/dimen_size_40"
                            android:background="@color/white"
                            android:hint="@string/uname_or_tel"
                            android:paddingLeft="14dp"
                            android:text=""
                            android:textColor="@color/black"
                            android:textColorHint="@color/hint_db"
                            android:textCursorDrawable="@drawable/edit_cursor"
                            android:textSize="@dimen/text_size_16" />
                    </LinearLayout>

                    <View
                        android:id="@+id/ImageView01"
                        android:layout_width="fill_parent"
                        android:layout_height="@dimen/line_0.3"
                        android:layout_marginLeft="@dimen/dimen_size_40"
                        android:layout_marginRight="@dimen/dimen_size_40"
                        android:layout_marginTop="3dp"
                        android:background="@color/divider_ccc" />

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dimen_size_40"
                        android:layout_marginRight="@dimen/dimen_size_40"
                        android:layout_marginTop="36dp"
                        android:baselineAligned="false"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="@dimen/dimen_size_18"
                            android:layout_height="@dimen/dimen_size_18"
                            android:layout_marginLeft="5dp"
                            android:src="@drawable/login_password" />

                        <EditText
                            android:id="@+id/password"
                            android:layout_width="fill_parent"
                            android:layout_height="@dimen/dimen_size_40"
                            android:background="@color/white"
                            android:hint="@string/hint_password"
                            android:inputType="textPassword"
                            android:paddingLeft="14dp"
                            android:textColor="@color/bar"
                            android:textColorHint="@color/hint_db"
                            android:textCursorDrawable="@drawable/edit_cursor"
                            android:textSize="@dimen/text_size_16" />
                    </LinearLayout>
                </LinearLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/line_0.3"
                    android:layout_marginLeft="@dimen/dimen_size_40"
                    android:layout_marginRight="@dimen/dimen_size_40"
                    android:layout_marginTop="3dp"
                    android:background="@color/divider_ccc" />

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/dimen_size_40"
                    android:layout_marginRight="@dimen/dimen_size_40"
                    android:layout_marginTop="26dp">

                    <Button
                        android:id="@+id/bt_login"
                        android:layout_width="fill_parent"
                        android:layout_height="@dimen/title_height"
                        android:background="@drawable/bt_round_themcolor_selector"
                        android:text="@string/logine"
                        android:textColor="@color/button_text_color"
                        android:textSize="@dimen/text_size_18" />

                    <Button
                        android:id="@+id/bt_register"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/bt_login"
                        android:layout_marginTop="13dp"
                        android:background="@null"
                        android:text="@string/new_user_register"
                        android:textColor="@color/gray"
                        android:textSize="@dimen/text_size_13" />

                    <Button
                        android:id="@+id/bt_login_forget"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignRight="@id/bt_login"
                        android:layout_below="@id/bt_login"
                        android:layout_marginLeft="13dp"
                        android:layout_marginTop="13dp"
                        android:background="@null"
                        android:text="@string/forget_password"
                        android:textColor="@color/gray"
                        android:textSize="@dimen/text_size_13" />
                </RelativeLayout>

            </LinearLayout>
        </LinearLayout>

        <com.xhy.neihanduanzi.view.TipView
            android:id="@+id/tip_view"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="@dimen/lay_48"
            android:visibility="gone"
            app:tipText="net_unavailable"
            app:tipTextSize="14sp"></com.xhy.neihanduanzi.view.TipView>

        <include layout="@layout/title_bar"></include>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginTop="48dp"
            android:background="@drawable/titlebar_shadow" />
    </FrameLayout>
</ScrollView>